--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="com.system.SHZApplication"
@@ -34,6 +34,8 @@
         <activity android:name="com.activity.ActivityZoom" />
         <activity android:name="com.activity.RVSActivity" />
         <activity android:name="com.activity.QRactivity" />
+        <activity android:name="com.activity.PathActivity" />
+        <activity android:name="com.activity.MemoryActivity" />
         <activity
             android:name="com.qrcapture.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -48,7 +50,7 @@
         </activity>
 
         <service
-            android:name="com.ashberrysoft.autoparad.data_providers.networking.AutoParadService"
+            android:name="com.service.SHZService"
             android:enabled="true" />
 
         <receiver
