--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -30,7 +32,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -44,7 +45,8 @@
         <activity android:name="com.activity.MemoryActivity" />
         <activity android:name="com.activity.MyOpenGL" />
         <activity android:name="com.activity.CanvasActivity" />
-         <activity android:name="com.activity.SoundActivity" />
+        <activity android:name="com.activity.SoundActivity"
+            android:screenOrientation="landscape" />
         <activity
             android:name="com.qrcapture.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
