--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -29,7 +29,8 @@
 
         <activity
             android:name="com.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -47,6 +48,7 @@
         <activity android:name="com.activity.CanvasActivity" />
         <activity android:name="com.activity.SoundActivity"
             android:screenOrientation="landscape" />
+        <activity android:name="com.activity.RotateImageActivity" />
         <activity
             android:name="com.qrcapture.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
