--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name="com.activity.SoundActivity"
             android:screenOrientation="landscape" />
         <activity android:name="com.activity.RotateImageActivity" />
+        <activity android:name="com.activity.GameActivity" android:screenOrientation="portrait"/>
         <activity
             android:name="com.qrcapture.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
