--- a/CaslteDefence/AndroidManifest.xml
+++ b/CaslteDefence/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.shz.castledefence.MainActivity"
+            android:name="com.shz.castledefence.scene.MainActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name" >
             <intent-filter>
